commit: Implement OrderDTO to Order mapping using MapStruct
This commit introduces the use of MapStruct to handle the conversion from OrderRequestDTO to Order entity. This includes:

- Creation of an OrderMapper interface with a mapping method.
- Utilization of the mapper in the OrderService to convert incoming DTOs into Order entities for persistence.

Unit tests have been updated to reflect these changes, and new tests have been added to ensure the proper functioning of the OrderMapper.